--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Product</h1>
 
-<%= render 'form', product: @product %>
+<%= render 'form', product: @product,"class"=>"btn btn-success btn-sm"  %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Show', @product,"class"=>"btn btn-default btn-sm"  %> |
+<%= link_to 'Back', products_path,"class"=>"btn btn-default btn-sm"  %>
